--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- Hero Section with Video -->
   <section class="hero">
     <video class="hero-video" autoplay muted loop playsinline poster="images/Mori_home_bg.jpg">
-      <source src="video/NLX_2500_cut_1m55s_to_2m15s.mp4" type="video/mp4">
+      <source src="video/Hero-Video.mp4" type="video/mp4">
     </video>
     <div class="hero-overlay"></div>
     <div class="hero-content">
