Updated CTA text - removed 24 hour commitment

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
   <!-- CTA Section -->
   <section class="cta-section">
     <div class="container">
-      <h2>Need precision parts on a tight deadline?</h2>
-      <p>Get your free quote within 24 hours</p>
+      <h2>Ready to discuss your next project?</h2>
+      <p>Let's talk about how we can help with your precision machining needs</p>
       <a href="contact.html" class="btn btn-primary">Contact Our Team</a>
     </div>
   </section>
