Added PixelMind ad to footer on all pages

--- a/contact.html
+++ b/contact.html
@@ -219,6 +219,9 @@
       </div>
       <div class="footer-bottom">
         <p>&copy; 2025 Matford Manufacturing Ltd. All rights reserved. | Company Reg: 06834261</p>
+        <a href="https://pixelmind.design" target="_blank" rel="noopener noreferrer" class="pixelmind-ad">
+          <img src="images/pixelmind-ad.png" alt="Website designed by PixelMind Design">
+        </a>
       </div>
     </div>
   </footer>
