Removed fax from footer, made address clickable to Google Maps

--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
         </div>
         <div class="footer-contact">
           <h4>Contact</h4>
-          <p><i class="fas fa-map-marker-alt"></i> 2 Short Street, Premier Business Park, Walsall WS2 9EB</p>
+          <p><i class="fas fa-map-marker-alt"></i> <a
+              href="https://www.google.com/maps/search/?api=1&query=2+Short+Street+Premier+Business+Park+Walsall+WS2+9EB"
+              target="_blank" rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
           <p><i class="fas fa-phone"></i> <a href="tel:+441922622293">+44 1922 622 293</a></p>
           <p><i class="fas fa-envelope"></i> <a href="mailto:info@matfordmfg.com">info@matfordmfg.com</a></p>
-          <p><i class="fas fa-fax"></i> +44 1922 723461</p>
         </div>
         <div class="footer-cert">
           <h4>Certifications</h4>
