Updated Google Maps link to Matford Manufacturing place page

--- a/services.html
+++ b/services.html
@@ -198,8 +198,8 @@
         <div class="footer-contact">
           <h4>Contact</h4>
           <p><i class="fas fa-map-marker-alt"></i> <a
-              href="https://www.google.com/maps/search/?api=1&query=2+Short+Street+Premier+Business+Park+Walsall+WS2+9EB"
-              target="_blank" rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
+              href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z" target="_blank"
+              rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
           <p><i class="fas fa-phone"></i> <a href="tel:+441922622293">+44 1922 622 293</a></p>
           <p><i class="fas fa-envelope"></i> <a href="mailto:info@matfordmfg.com">info@matfordmfg.com</a></p>
 
