Updated address link to full Google Business page URL

--- a/contact.html
+++ b/contact.html
@@ -123,8 +123,8 @@
           <!-- Mini Map -->
           <div class="contact-map">
             <h4><i class="fas fa-map"></i> Find Us</h4>
-            <a href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z" target="_blank"
-              rel="noopener noreferrer" class="map-thumbnail">
+            <a href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z/data=!3m1!4b1!4m6!3m5!1s0x487098a0b1db9ba3:0x807ac1dbf2a24f74!8m2!3d52.582461!4d-1.9898289!16s%2Fg%2F1tfgcp4m"
+              target="_blank" rel="noopener noreferrer" class="map-thumbnail">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2425.123!2d-1.968!3d52.583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTLCsDM1JzAwLjAiTiAxwrA1OCcwMC4wIlc!5e0!3m2!1sen!2suk!4v1234567890"
                 loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Matford Manufacturing Location">
@@ -207,8 +207,8 @@
         <div class="footer-contact">
           <h4>Contact</h4>
           <p><i class="fas fa-map-marker-alt"></i> <a
-              href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z" target="_blank"
-              rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
+              href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z/data=!3m1!4b1!4m6!3m5!1s0x487098a0b1db9ba3:0x807ac1dbf2a24f74!8m2!3d52.582461!4d-1.9898289!16s%2Fg%2F1tfgcp4m"
+              target="_blank" rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
           <p><i class="fas fa-phone"></i> <a href="tel:+441922622293">+44 1922 622 293</a></p>
           <p><i class="fas fa-envelope"></i> <a href="mailto:info@matfordmfg.com">info@matfordmfg.com</a></p>
 
