--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
         <div class="footer-contact">
           <h4>Contact</h4>
           <p><i class="fas fa-map-marker-alt"></i> <a
-              href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z" target="_blank"
-              rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
+              href="https://www.google.com/maps/place/Matford+Manufacturing/@52.5824642,-1.9946998,17z/data=!3m1!4b1!4m6!3m5!1s0x487098a0b1db9ba3:0x807ac1dbf2a24f74!8m2!3d52.582461!4d-1.9898289!16s%2Fg%2F1tfgcp4m"
+              target="_blank" rel="noopener noreferrer">2 Short Street, Premier Business Park, Walsall WS2 9EB</a></p>
           <p><i class="fas fa-phone"></i> <a href="tel:+441922622293">+44 1922 622 293</a></p>
           <p><i class="fas fa-envelope"></i> <a href="mailto:info@matfordmfg.com">info@matfordmfg.com</a></p>
         </div>
