Added swipeable product gallery carousel to homepage

--- a/about.html
+++ b/about.html
@@ -219,6 +219,9 @@
   </footer>
 
   <script src="js/main.js"></script>
+
+  <!-- PixelMind Labs Analytics -->
+  <script src="http://localhost:3000/api/tracker/matford-mfg.js" async></script>
 </body>
 
 </html>
