--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
 
   <!-- Hero Section with Video -->
   <section class="hero">
-    <video class="hero-video" autoplay muted loop playsinline poster="images/Mori_home_bg.jpg">
+    <video class="hero-video" autoplay muted loop playsinline preload="auto" poster="images/Mori_home_bg.jpg"
+      id="heroVideo">
       <source src="video/Hero-Video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
     <div class="hero-overlay"></div>
     <div class="hero-content">
